[package]
name = "egui_text_animation"
version = "0.1.3"
edition = "2024"
authors = ["dest4590"]
description = "A simple text animation using egui"
license-file = "LICENSE"
repository = "https://github.com/dest4590/egui_text_animation"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
rand = "0.9.0"